# nvtx-mock

./: .gitmodules  README.md  dummy.c  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
