[metadata]
name = nvtx-mock
version = 0.1.0
author = Yinying Yao
author-email = yaoyy.hi@example.com
description = A mock package for NVTX C headers

[options]
packages = find:

[options.package_data]
* = nvtx3/*

[options.entry_points]
console_scripts =
    # Add any console scripts here if needed

[bdist_wheel]
universal = 1